# Agt

./: .gitignore  .mcp.json  AGENT.md  AGENTS.md  LICENSE  MANIFEST.in  README.md  agent.py  agent_config.py  chat.py  commands.py  config.py  llm_client.py  lsp_server.py  mcp_client.py  models.example.py  multiagent.py  pyproject.toml  real_tools.py  release.py  requirements.txt  session.py  snapshots.py  step1_demo.py  step2_demo.py  step4_demo.py  step7_demo.py  structured.py  tools.py  verify_composite_demo.py  verify_download.py  verify_events.py  verify_full_demo.py  verify_logging.py  verify_loop_batch.py  verify_ltm.py  verify_toollog.py  web.py  wiki.py  workflow.py
.agent/rules/: workflow.md
.agent/workflows/: README.md  batch_double.json  classify_age.json  composite_demo.xml  double_xml.xml  full_demo.xml  greet.json  greet_xml.xml  intent_route.json  json_roundtrip.json  loop_greet.json  stock_query.xml  use_subworkflow.json  wait_demo.json  wiki_auto_maintenance.xml
docs/: workflow-spec.md
examples/: conversation.py  step0_hello.py  step3_demo.py  step5_demo.py  step6_demo.py
src/: __init__.py  agent.py  background.py  background_tools.py  chat.py  commands.py  config.py  download.py  feedback.py  llm_call_log.py  llm_client.py  log.py  longterm_memory.py  lsp_manager.py  mcp_client.py  memory_tools.py  multiagent.py  plan_tools.py  prompts.py  rag.py  real_tools.py  session.py  toollog.py  tools.py  web.py  wiki.py  workflow.py  workflow_xml.py
src/assets/: manifest.json
src/lsp_scripts/: csharp_lsp.py  python_lsp.py
src/static/: index.html  rag.html  workflow_debug.html  workflow_editor.html
src/workflows/: cs_auto_diag.xml  stock_query.xml  wiki_auto_maintenance.xml  wiki_auto_query.xml
static/: index.html  workflow_editor.html
(+2 files in other folders)
