[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agt-agent"
dynamic = ["version"]
description = "AI Agent 框架——多模型 ReAct 引擎 + MCP 集成 + Coze 工作流 + WebUI + 可视化编辑器"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "马建强", email = "vgp7758@github.com"}
]
keywords = ["ai", "agent", "llm", "mcp", "workflow", "coze"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "ddgs>=9.0.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "jedi>=0.19",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "websockets>=12.0",
    "python-docx>=0.8",
    "openpyxl>=3.0",
    "PyPDF2>=3.0",
    "pymupdf>=1.23",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.21"]

[project.scripts]
agt = "src.chat:main"
agt-web = "src.web:main"

[project.urls]
Homepage = "https://github.com/vgp7758/Agt"
Repository = "https://github.com/vgp7758/Agt"
Issues = "https://github.com/vgp7758/Agt/issues"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-data]
src = ["static/*.html", "lsp_scripts/*.py"]

[tool.setuptools.dynamic]
version = {attr = "src.__version__"}
